--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -1,61 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.FilterActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-<!--    <include-->
-<!--        android:id="@+id/include4"-->
-<!--        layout="@layout/header_black" />-->
+    <data>
 
-<!--    <com.google.android.material.chip.ChipGroup-->
-<!--        android:id="@+id/chipGroup"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        android:layout_marginTop="@dimen/_50sdp"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/include4">-->
+    </data>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/filterRv"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:layout_marginRight="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        app:spanCount="3" />
+        android:layout_height="match_parent"
+        tools:context=".activity.FilterActivity">
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btnFil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="Add Card"
-        android:fontFamily="@font/catamaran"
-        android:text="Apply Filter"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:backgroundTint="#4EB1E0"
-        app:icon="@drawable/ic_baseline_done_24"
-        app:iconTint="@color/white"/>
-    <!--    </com.google.android.material.chip.ChipGroup>-->
+        <!--    <include-->
+        <!--        android:id="@+id/include4"-->
+        <!--        layout="@layout/header_black" />-->
+
+        <!--    <com.google.android.material.chip.ChipGroup-->
+        <!--        android:id="@+id/chipGroup"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="match_parent"-->
+        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--        app:layout_constraintStart_toStartOf="parent"-->
+        <!--        android:layout_marginTop="@dimen/_50sdp"-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/include4">-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/filterRv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            app:spanCount="3" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btnFil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.945"
+            app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="Add Card"
+            android:fontFamily="@font/catamaran"
+            android:text="Apply Filter"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:backgroundTint="#4EB1E0"
+            app:icon="@drawable/ic_baseline_done_24"
+            app:iconTint="@color/white" />
+        <!--    </com.google.android.material.chip.ChipGroup>-->
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
