--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.LockActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.hanks.passcodeview.PasscodeView
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/passcode_view"
-        android:background="@android:color/holo_blue_bright"
-        app:correctStateColor="@android:color/holo_green_light"
-        app:wrongStateColor="@android:color/holo_red_light"
-        app:numberTextColor="@android:color/darker_gray">
-    </com.hanks.passcodeview.PasscodeView>
+        tools:context=".activity.LockActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.hanks.passcodeview.PasscodeView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/passcode_view"
+            android:background="@android:color/holo_blue_bright"
+            app:correctStateColor="@android:color/holo_green_light"
+            app:wrongStateColor="@android:color/holo_red_light"
+            app:numberTextColor="@android:color/darker_gray"></com.hanks.passcodeview.PasscodeView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
