--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,195 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:visibility="visible"
-    android:orientation="vertical"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    tools:context=".LoginActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include layout="@layout/header_black_2" />
+    <data>
 
-    <RelativeLayout
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        tools:context=".LoginActivity">
 
-        <ScrollView
+        <include layout="@layout/header_black_2" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:scrollbarThumbVertical="@android:color/transparent">
+            android:layout_height="match_parent">
 
-
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:fillViewport="true"
+                android:scrollbarThumbVertical="@android:color/transparent">
 
 
                 <LinearLayout
-                    android:id="@+id/layoutRoot"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        android:orientation="horizontal">
 
-                        <ImageView
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp"
+                    <LinearLayout
+                        android:id="@+id/layoutRoot"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="@dimen/_25sdp"
+                                android:layout_height="@dimen/_25sdp"
+                                android:layout_marginStart="@dimen/_20sdp"
+                                android:layout_marginTop="@dimen/_15sdp"
+                                android:padding="@dimen/_4sdp"
+                                android:src="@drawable/email"
+                                android:layout_marginLeft="@dimen/_20sdp" />
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/txtInpEmail"
+
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_5sdp"
+                                android:layout_marginEnd="@dimen/_20sdp"
+                                android:hint="Email"
+
+                                app:helperTextEnabled="true"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:layout_marginRight="@dimen/_20sdp">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/txtEm"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/catamaran"
+                                    android:imeOptions="actionNext"
+                                    android:importantForAutofill="no"
+                                    android:inputType="textEmailAddress|textNoSuggestions"
+                                    android:maxLines="1" />
+                            </com.google.android.material.textfield.TextInputLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="@dimen/_25sdp"
+                                android:layout_height="@dimen/_25sdp"
+                                android:layout_marginTop="@dimen/_14sdp"
+                                android:padding="@dimen/_4sdp"
+                                android:layout_marginStart="@dimen/_20sdp"
+                                android:src="@drawable/lock"
+                                android:layout_marginLeft="@dimen/_20sdp" />
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/txtInpPin"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_5sdp"
+                                android:layout_marginEnd="@dimen/_20sdp"
+                                android:hint="Password"
+                                app:passwordToggleEnabled="true"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:layout_marginRight="@dimen/_20sdp">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/txtPass"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/catamaran"
+                                    android:imeOptions="actionDone"
+                                    android:inputType="textPassword"
+                                    android:letterSpacing="0.5"
+                                    android:maxLength="16"
+                                    android:maxLines="1" />
+                            </com.google.android.material.textfield.TextInputLayout>
+                        </LinearLayout>
+
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/btnLg"
+                            style="@style/Button_yellow_caps"
                             android:layout_marginStart="@dimen/_20sdp"
+                            android:layout_marginEnd="@dimen/_20sdp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_15sdp"
-                            android:padding="@dimen/_4sdp"
-                            android:src="@drawable/email"
-                            android:layout_marginLeft="@dimen/_20sdp" />
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:text="Login" />
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:id="@+id/txtInpEmail"
-
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/txtForgot"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_5sdp"
-                            android:layout_marginEnd="@dimen/_20sdp"
-                            android:hint="Email"
+                            android:layout_gravity="center_horizontal"
+                            android:padding="@dimen/_5sdp"
+                            android:text="Forgot Password?"
+                            android:textColor="#32465B" />
 
-                            app:helperTextEnabled="true"
-                            android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_marginRight="@dimen/_20sdp">
+                        <Button
+                            android:id="@+id/btnGoogle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:background="@color/white"
+                            android:paddingEnd="@dimen/_5sdp"
+                            android:paddingStart="@dimen/_5sdp"
+                            android:drawablePadding="@dimen/_5sdp"
+                            android:drawableStart="@drawable/ic_google"
+                            android:text="sign in with google"
+                            android:textAllCaps="false"
+                            android:textSize="16sp" />
 
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/txtEm"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/catamaran"
-                                android:imeOptions="actionNext"
-                                android:importantForAutofill="no"
-                                android:inputType="textEmailAddress|textNoSuggestions"
-                                android:maxLines="1" />
-                        </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:orientation="horizontal"
+                        android:layout_gravity="center_horizontal">
 
-                        <ImageView
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp"
-                            android:layout_marginTop="@dimen/_14sdp"
-                            android:padding="@dimen/_4sdp"
-                            android:layout_marginStart="@dimen/_20sdp"
-                            android:src="@drawable/lock"
-                            android:layout_marginLeft="@dimen/_20sdp" />
+                        <TextView
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:id="@+id/txtInpPin"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_5sdp"
-                            android:layout_marginEnd="@dimen/_20sdp"
-                            android:hint="Password"
-                            app:passwordToggleEnabled="true"
-                            android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_marginRight="@dimen/_20sdp">
+                            android:layout_gravity="center_horizontal"
+                            android:padding="@dimen/_5sdp"
+                            android:text="Don't Have an Account"
+                            android:textColor="#32465B" />
 
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/txtPass"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/catamaran"
-                                android:imeOptions="actionDone"
-                                android:inputType="textPassword"
-                                android:letterSpacing="0.5"
-                                android:maxLength="16"
-                                android:maxLines="1" />
-                        </com.google.android.material.textfield.TextInputLayout>
+                        <TextView
+                            android:id="@+id/txtSignup"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginStart="@dimen/_minus5sdp"
+                            android:layout_marginLeft="@dimen/_minus5sdp"
+                            android:padding="@dimen/_5sdp"
+                            android:text="Sign Up"
+                            android:textColor="#4EB1E0" />
                     </LinearLayout>
 
-
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnLg"
-                        style="@style/Button_yellow_caps"
-                        android:layout_marginStart="@dimen/_20sdp"
-                        android:layout_marginEnd="@dimen/_20sdp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_15sdp"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:text="Login" />
-
-                    <TextView
-                        android:id="@+id/txtForgot"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:padding="@dimen/_5sdp"
-                        android:text="Forgot Password?"
-                        android:textColor="#32465B" />
-
-                    <Button
-                        android:id="@+id/btnGoogle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="60dp"
-                        android:background="@color/white"
-                        android:paddingEnd="@dimen/_5sdp"
-                        android:paddingStart="@dimen/_5sdp"
-                        android:drawablePadding="@dimen/_5sdp"
-                        android:drawableStart="@drawable/ic_google"
-                        android:text="sign in with google"
-                        android:textAllCaps="false"
-                        android:textSize="16sp"/>
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_10sdp"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center_horizontal">
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:padding="@dimen/_5sdp"
-                        android:text="Don't Have an Account"
-                        android:textColor="#32465B" />
-
-                    <TextView
-                        android:id="@+id/txtSignup"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="@dimen/_minus5sdp"
-                        android:layout_marginLeft="@dimen/_minus5sdp"
-                        android:padding="@dimen/_5sdp"
-                        android:text="Sign Up"
-                        android:textColor="#4EB1E0" />
                 </LinearLayout>
 
-            </LinearLayout>
+
+            </ScrollView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_5sdp"
+                android:background="@drawable/shadow_header" />
+        </RelativeLayout>
 
 
-        </ScrollView>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_5sdp"
-            android:background="@drawable/shadow_header" />
-    </RelativeLayout>
-
-
-</LinearLayout>
+    </LinearLayout>
+</layout>
