--- a/app/src/main/res/layout/activity_spalsh.xml
+++ b/app/src/main/res/layout/activity_spalsh.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.SpalshActivity"
-    android:orientation="vertical"
-    android:gravity="center">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/spImg"
-        android:src="@mipmap/couponbagimg"
-        android:layout_width="@dimen/_270sdp"
-        android:layout_height="@dimen/_270sdp" />
+    <data>
+
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".activity.SpalshActivity"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/spImg"
+            android:src="@mipmap/couponbagimg"
+            android:layout_width="@dimen/_270sdp"
+            android:layout_height="@dimen/_270sdp" />
 
 
-    <TextView
-        android:id="@+id/sptTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/capriola"
-        android:text="Digitise Your Card"
-        android:textColor="@color/teal_200"
-        android:layout_marginLeft="@dimen/_50sdp"
-        android:textSize="22sp" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/sptTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/capriola"
+            android:text="Digitise Your Card"
+            android:textColor="@color/teal_200"
+            android:layout_marginLeft="@dimen/_50sdp"
+            android:textSize="22sp" />
+    </LinearLayout>
+</layout>
