--- a/app/src/main/res/layout/activity_card_list.xml
+++ b/app/src/main/res/layout/activity_card_list.xml
@@ -113,7 +113,8 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/catamaran"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="phone"
+                                    android:maxLength="10"
                                     android:maxLines="1" />
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
