DONE: [x] - Modify AddCardActivity.kt

--- a/app/src/main/res/layout/header_black.xml
+++ b/app/src/main/res/layout/header_black.xml
@@ -20,11 +20,11 @@
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_centerVertical="true"
-            android:padding="@dimen/_8sdp"
-            android:elevation="0dp"
             android:layout_marginStart="@dimen/_5sdp"
-            android:src="@drawable/back_white"
-            android:layout_marginLeft="@dimen/_5sdp" />
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:elevation="0dp"
+            android:padding="@dimen/_8sdp"
+            android:src="@drawable/back_white" />
 
 
         <TextView
