DONE: [x] - AddCardActivity.kt Change Reward Problem

--- a/app/src/main/res/layout/activity_add_card2.xml
+++ b/app/src/main/res/layout/activity_add_card2.xml
@@ -141,7 +141,7 @@
                                         android:fontFamily="@font/catamaran"
                                         android:imeOptions="actionNext"
                                         android:inputType="number"
-                                        android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
+                                        android:maxLength="3"
                                         android:maxLines="1" />
                                 </com.google.android.material.textfield.TextInputLayout>
                             </LinearLayout>
