--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -165,5 +165,5 @@
             android:text="Save"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
             app:layout_constraintLeft_toLeftOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>=
 </layout>
