--- a/app/src/main/res/layout/activity_add_store.xml
+++ b/app/src/main/res/layout/activity_add_store.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -7,12 +8,15 @@
 
     </data>
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
         android:focusableInTouchMode="true"
         tools:context=".activity.AddStoreActivity">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,7 +100,7 @@
                                         android:imeOptions="actionNext"
                                         android:inputType="textCapWords"
                                         android:maxLines="1"
-                                        android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789, ,'"></com.google.android.material.textfield.MaterialAutoCompleteTextView>
+                                        android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789, ,'" />
 
                                 </com.google.android.material.textfield.TextInputLayout>
                             </LinearLayout>
@@ -233,4 +237,5 @@
 
 
     </RelativeLayout>
+
 </layout>
