--- a/app/src/main/res/layout/store_details.xml
+++ b/app/src/main/res/layout/store_details.xml
@@ -76,6 +76,7 @@
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
+                        android:maxLines="1"
                         android:textStyle="bold" />
 
                 </LinearLayout>
