--- a/app/src/main/res/layout/activity_add_card2.xml
+++ b/app/src/main/res/layout/activity_add_card2.xml
@@ -47,15 +47,16 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_50sdp"
+                                android:layout_marginBottom="@dimen/_25sdp"
                                 android:orientation="horizontal"
                                 android:gravity="center_horizontal">
 
                                 <ImageView
-                                    android:layout_width="@dimen/_110sdp"
+                                    android:layout_width="@dimen/_140sdp"
                                     android:layout_height="@dimen/_110sdp"
                                     android:id="@+id/imgCr"
-                                    android:src="@drawable/coupan" />
+                                    android:src="@drawable/coupan"
+                                    app:tint="@color/dark_blue"/>
 
                             </LinearLayout>
 
