--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fillViewport="true"
+                android:layout_centerInParent="true"
                 android:scrollbarThumbVertical="@android:color/transparent">
 
 
@@ -42,6 +43,17 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="250dp"
+                            android:layout_height="150dp"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@mipmap/couponbagimg">
+
+                            </ImageView>
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
