--- a/app/src/main/res/layout/card_details.xml
+++ b/app/src/main/res/layout/card_details.xml
@@ -65,6 +65,11 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/catamaran"
                         android:textAlignment="center"
+                        android:singleLine="true"
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:scrollHorizontally="true"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
